--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "dotenv": "^8.2.0",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
-    "moment": "^2.27.0",
+    "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
@@ -35,7 +35,9 @@
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2"
+    "eslint-plugin-vue": "^6.1.2",
+    "pug": "^3.0.2",
+    "pug-plain-loader": "^1.1.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
