A first pass at contract support

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^8.2.0",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
+    "erc-20-abi": "^1.0.0",
     "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "ual-anchor": "^1.0.0",
