--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
     "erc-20-abi": "^1.0.0",
+    "ethers": "^5.5.1",
     "moment": "^2.29.1",
     "quasar": "^1.0.0",
     "ual-anchor": "^1.0.0",
