--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "ual-scatter": "^0.3.0",
     "ual-wombat": "^0.3.3",
     "universal-authenticator-library": "^0.3.0",
+    "vue-json-viewer": "^2.2.20",
     "web3": "^1.6.1"
   },
   "devDependencies": {
