--- a/package.json
+++ b/package.json
@@ -42,7 +42,8 @@
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
     "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "pug-plain-loader": "^1.1.0",
+    "solc": "^0.8.3"
   },
   "browserslist": [
     "last 10 Chrome versions",
