--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
   NETWORK_EVM_ENDPOINT = "https://mainnet.telos.net"
   NETWORK_EVM_CONTRACT = "eosio.evm"
   NETWORK_EVM_CHAIN_ID = "40"
-  NETWORK_EXPLORER = "https://telos.bloks.io"
+  NETWORK_EXPLORER = "https://telos.eosauthority.com"
   HYPERION_ENDPOINT = "https://mainnet.telos.net"
 
 [context.dev.environment]
@@ -27,5 +27,5 @@
   NETWORK_EVM_ENDPOINT = "https://testnet.telos.net"
   NETWORK_EVM_CONTRACT = "eosio.evm"
   NETWORK_EVM_CHAIN_ID = "41"
-  NETWORK_EXPLORER = "https://telos-test.bloks.io"
+  NETWORK_EXPLORER = "https://telostest.eosauthority.com"
   HYPERION_ENDPOINT = "https://testnet.telos.net"
