--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eosjs-ecc": "^4.0.7",
     "erc-20-abi": "^1.0.0",
     "ethers": "^5.5.1",
+    "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
     "moment": "^2.29.1",
     "quasar": "^1.0.0",
@@ -42,7 +43,6 @@
     "eslint-config-prettier": "^6.9.0",
     "eslint-loader": "^3.0.3",
     "eslint-plugin-vue": "^6.1.2",
-    "highlightjs": "^9.12.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   },
