--- a/netlify.toml
+++ b/netlify.toml
@@ -15,6 +15,7 @@
   NETWORK_EVM_CHAIN_ID = "40"
   NETWORK_EXPLORER = "https://telos.eosauthority.com"
   HYPERION_ENDPOINT = "https://mainnet.telos.net"
+  TELOS_API_ENDPOINT = "https://api.telos.net"
 
 [context.dev.environment]
   APP_NAME = "Teloscan Testnet"
@@ -29,6 +30,7 @@
   NETWORK_EVM_CHAIN_ID = "41"
   NETWORK_EXPLORER = "https://telostest.eosauthority.com"
   HYPERION_ENDPOINT = "https://testnet.telos.net"
+  TELOS_API_ENDPOINT = "https://api-dev.telos.net"
 
 [context.deploy-preview.environment]
   APP_NAME = "Teloscan Testnet"
@@ -43,6 +45,7 @@
   NETWORK_EVM_CHAIN_ID = "41"
   NETWORK_EXPLORER = "https://telostest.eosauthority.com"
   HYPERION_ENDPOINT = "https://testnet.telos.net"
+  TELOS_API_ENDPOINT = "https://api-dev.telos.net"
 
 [[redirects]]
   from = "/*"
