--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,7 @@ APP_NAME=Teloscan
 #NETWORK_EXPLORER=https://telos-test.bloks.io
 #HYPERION_ENDPOINT=https://testnet.telos.caleos.io
 #TELOS_API_ENDPOINT=https://api-dev.telos.net/v1
-# VERIFIED_CONTRACTS_BUCKET: 'verified-evm-contracts-testnet'
+# VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts-testnet
 
 #TELOS_API_ENDPOINT=http://localhost:9999/v1
 
@@ -28,7 +28,7 @@ NETWORK_EVM_CHAIN_ID=40
 NETWORK_EXPLORER=https://telos.bloks.io
 HYPERION_ENDPOINT=https://telos.caleos.io
 TELOS_API_ENDPOINT=https://api.telos.net/v1
-VERIFIED_CONTRACTS_BUCKET: 'verified-evm-contracts'
+VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts
 
 
 
