--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@telosnetwork/telosevm-js": "^0.2.6",
     "@telosnetwork/ual-telos-keycat": "1.10.3",
     "axios": "^0.20.0",
+    "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
