--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
+    "@ethereumjs/tx": "^3.5.0",
     "@quasar/extras": "^1.0.0",
     "@smontero/ual-sqrl": "^0.1.22",
     "@telosnetwork/telosevm-js": "^0.2.6",
@@ -25,6 +26,7 @@
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
     "erc-20-abi": "^1.0.0",
+    "ethereumjs-util": "^7.1.4",
     "ethers": "^5.5.1",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
