update explorer links from eosauthority to telos(dot)net

--- a/netlify.toml
+++ b/netlify.toml
@@ -13,7 +13,7 @@
   NETWORK_EVM_ENDPOINT = "https://mainnet.telos.net"
   NETWORK_EVM_CONTRACT = "eosio.evm"
   NETWORK_EVM_CHAIN_ID = "40"
-  NETWORK_EXPLORER = "https://telos.eosauthority.com"
+  NETWORK_EXPLORER = "https://explorer.telos.net"
   HYPERION_ENDPOINT = "https://mainnet.telos.net"
   TELOS_API_ENDPOINT = "https://api.telos.net"
   VERIFIED_CONTRACTS_BUCKET = "verified-evm-contracts"
@@ -29,7 +29,7 @@
   NETWORK_EVM_ENDPOINT = "https://testnet.telos.net"
   NETWORK_EVM_CONTRACT = "eosio.evm"
   NETWORK_EVM_CHAIN_ID = "41"
-  NETWORK_EXPLORER = "https://telostest.eosauthority.com"
+  NETWORK_EXPLORER = "https://explorer-test.telos.net"
   HYPERION_ENDPOINT = "https://testnet.telos.net"
   TELOS_API_ENDPOINT = "https://api-dev.telos.net"
   VERIFIED_CONTRACTS_BUCKET = "verified-evm-contracts-testnet"
@@ -45,7 +45,7 @@
   NETWORK_EVM_ENDPOINT = "https://testnet.telos.net"
   NETWORK_EVM_CONTRACT = "eosio.evm"
   NETWORK_EVM_CHAIN_ID = "41"
-  NETWORK_EXPLORER = "https://telostest.eosauthority.com"
+  NETWORK_EXPLORER = "https://explorer-test.telos.net"
   HYPERION_ENDPOINT = "https://testnet.telos.net"
   TELOS_API_ENDPOINT = "https://api-dev.telos.net"
   VERIFIED_CONTRACTS_BUCKET = "verified-evm-contracts-testnet"
