update example env, remove Transaction legacy page

--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,7 @@ APP_NAME=Teloscan
 #NETWORK_EVM_ENDPOINT=https://testnet.telos.caleos.io
 #NETWORK_EVM_CONTRACT=eosio.evm
 #NETWORK_EVM_CHAIN_ID=41
-#NETWORK_EXPLORER=https://telos-test.bloks.io
+#NETWORK_EXPLORER=https://explorer-test.telos.net
 #HYPERION_ENDPOINT=https://testnet.telos.caleos.io
 #TELOS_API_ENDPOINT=https://api-dev.telos.net/v1
 # VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts-testnet
@@ -25,7 +25,7 @@ NETWORK_EVM_RPC=https://mainnet.telos.net/evm
 NETWORK_EVM_ENDPOINT=https://mainnet.telos.net
 NETWORK_EVM_CONTRACT=eosio.evm
 NETWORK_EVM_CHAIN_ID=40
-NETWORK_EXPLORER=https://telos.bloks.io
+NETWORK_EXPLORER=https://explorer.telos.net
 HYPERION_ENDPOINT=https://telos.caleos.io
 TELOS_API_ENDPOINT=https://api.telos.net/v1
 VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts
