--- a/package.json
+++ b/package.json
@@ -43,12 +43,20 @@
   "devDependencies": {
     "@quasar/app": "^2.0.0",
     "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
-    "eslint-config-prettier": "^6.9.0",
+    "eslint-config-airbnb-base": "14.2.1",
     "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "eslint-plugin-import": "2.22.1",
+    "eslint-plugin-vue": "7.5.0",
+    "eslint": "^6.8.0",
+    "husky": "^7.0.4",
+    "pug-plain-loader": "^1.1.0",
+    "pug": "^3.0.2"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run lint",
+      "pre-push": "npm run lint"
+    }
   },
   "browserslist": [
     "last 10 Chrome versions",
