--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
-    "eslint": "^8.15.0",
-    "eslint-plugin-vue": "^8.7.1",
+    "babel-eslint": "^10.0.1",
+    "eslint": "^6.8.0",
+    "eslint-loader": "^3.0.3",
+    "eslint-plugin-vue": "^6.1.2",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   },
