update vscode workspace recs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,2 +1,12 @@
 {
+    "eslint.validate": [
+        "javascript",
+        "javascriptreact",
+        "typescript",
+        "vue"
+    ],
+    "eslint.alwaysShowStatus": true,
+    "eslint.format.enable": true,
+    "eslint.lintTask.enable": true,
+    "eslint.packageManager": "yarn",
 }
