WIP - add /token route with xfers

--- a/.env.example
+++ b/.env.example
@@ -12,7 +12,8 @@ APP_NAME=Teloscan
 #NETWORK_EXPLORER=https://explorer-test.telos.net
 #HYPERION_ENDPOINT=https://testnet.telos.caleos.io
 #TELOS_API_ENDPOINT=https://api-dev.telos.net/v1
-# VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts-testnet
+#TELOSCAN_API_ENDPOINT=https://api.teloscan.io/v1
+#VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts-testnet
 
 #TELOS_API_ENDPOINT=http://localhost:9999/v1
 
@@ -28,7 +29,5 @@ NETWORK_EVM_CHAIN_ID=40
 NETWORK_EXPLORER=https://explorer.telos.net
 HYPERION_ENDPOINT=https://telos.caleos.io
 TELOS_API_ENDPOINT=https://api.telos.net/v1
+TELOSCAN_API_ENDPOINT=https://api.teloscan.io/v1
 VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts
-
-
-
