--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,9 @@ APP_NAME=Teloscan
 #TELOS_API_ENDPOINT=https://api-dev.telos.net/v1
 # VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts-testnet
 
+# STLOS_CONTRACT_ADDRESS=0x5a9b40a59109a848b82a0ff153910bb595082e09
+# STLOS_ESCROW_CONTRACT_ADDRESS=0x0a5b1c590F23b1B63716f613dA1C29979C63fF7a
+
 #TELOS_API_ENDPOINT=http://localhost:9999/v1
 
 # MAINNET VALUES
@@ -30,5 +33,5 @@ HYPERION_ENDPOINT=https://telos.caleos.io
 TELOS_API_ENDPOINT=https://api.telos.net/v1
 VERIFIED_CONTRACTS_BUCKET=verified-evm-contracts
 
-
-
+# STLOS_CONTRACT_ADDRESS=
+# STLOS_ESCROW_CONTRACT_ADDRESS=
