--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "@quasar/app": "^2.0.0",
+    "@types/lodash": "^4.14.182",
     "babel-eslint": "^10.0.1",
     "eslint": "^6.8.0",
     "eslint-loader": "^3.0.3",
