fix: update contract addresses in toml for netlify deployments

--- a/netlify.toml
+++ b/netlify.toml
@@ -37,8 +37,8 @@
   TELOS_API_ENDPOINT = "https://api-dev.telos.net"
   VERIFIED_CONTRACTS_BUCKET = "verified-evm-contracts-testnet"
 
-  STAKED_TLOS_CONTRACT_ADDRESS = "0xcF567fD3B5D05934a769b108DaA1c931dd529793"
-  TELOS_ESCROW_CONTRACT_ADDRESS = "0xB679ab23726d7EaF1b3b807b018A27362E7B85F8"
+  STAKED_TLOS_CONTRACT_ADDRESS="0xF200706fe04c3B365A9BcB466e1939B9d524057E"
+  TELOS_ESCROW_CONTRACT_ADDRESS="0x7E9cF9fBc881652B05BB8F26298fFAB538163b6f"
 
 [context.deploy-preview.environment]
   APP_NAME = "Teloscan Testnet"
@@ -56,8 +56,8 @@
   TELOS_API_ENDPOINT = "https://api-dev.telos.net"
   VERIFIED_CONTRACTS_BUCKET = "verified-evm-contracts-testnet"
 
-  STAKED_TLOS_CONTRACT_ADDRESS = "0xcF567fD3B5D05934a769b108DaA1c931dd529793"
-  TELOS_ESCROW_CONTRACT_ADDRESS = "0xB679ab23726d7EaF1b3b807b018A27362E7B85F8"
+  STAKED_TLOS_CONTRACT_ADDRESS="0xF200706fe04c3B365A9BcB466e1939B9d524057E"
+  TELOS_ESCROW_CONTRACT_ADDRESS="0x7E9cF9fBc881652B05BB8F26298fFAB538163b6f"
 
 [[redirects]]
   from = "/*"
