--- a/package.json
+++ b/package.json
@@ -41,11 +41,11 @@
     "web3": "^1.6.1"
   },
   "devDependencies": {
-    "@quasar/app": "^2.0.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^6.8.0",
-    "eslint-loader": "^3.0.3",
-    "eslint-plugin-vue": "^6.1.2",
+    "@quasar/app": "^2.4.0",
+    "@babel/eslint-parser": "^7.13.14",
+    "eslint": "^8.10.0",
+    "eslint-webpack-plugin": "^2.0.0",
+    "eslint-plugin-vue": "^9.0.0",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   },
