fix: add missing dependencies

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-loader": "^8.1.0",
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
+    "crypto": "npm:crypto-browserify",
     "dotenv": "^8.2.0",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
@@ -28,12 +29,15 @@
     "ethers": "^5.5.1",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
+    "https": "npm:https-browserify",
     "moment": "^2.29.4",
     "quasar": "2",
+    "http": "npm:stream-http",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
     "ual-wombat": "^0.3.3",
     "universal-authenticator-library": "^0.3.0",
+    "url": "^0.11.0",
     "vue": "3",
     "vue-json-viewer": "2",
     "vue-router": "4",
