fix: add rquired node polyfill plugin for updated webpack

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
     "crypto": "npm:crypto-browserify",
+    "crypto-browserify": "^3.12.0",
     "dotenv": "^8.2.0",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
@@ -29,10 +30,10 @@
     "ethers": "^5.5.1",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
+    "http": "npm:stream-http",
     "https": "npm:https-browserify",
     "moment": "^2.29.4",
     "quasar": "2",
-    "http": "npm:stream-http",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
     "ual-wombat": "^0.3.3",
@@ -50,6 +51,7 @@
     "eslint": "^8.10.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.4.0",
+    "node-polyfill-webpack-plugin": "^2.0.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
   },
