--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "vue": "3",
     "vue-json-viewer": "3",
     "vue-router": "4",
+    "vue3-click-away": "^1.2.4",
     "vuex": "4",
     "web3": "^1.7.5"
   },
