--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "quasar dev",
     "build": "quasar build",
     "lint": "eslint --ext .js,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
+    "test": "jest",
     "nuke": "rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
@@ -46,12 +46,20 @@
     "web3": "^1.7.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.19.3",
     "@babel/eslint-parser": "^7.13.14",
+    "@babel/preset-env": "^7.19.3",
     "@quasar/app-webpack": "3",
+    "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
+    "@vue/test-utils": "^2.1.0",
+    "babel-jest": "^29.1.2",
     "eslint": "8.22.0",
+    "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.4.0",
+    "jest": "29.1.2",
+    "jest-environment-jsdom": "29.1.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
