--- a/package.json
+++ b/package.json
@@ -46,14 +46,15 @@
     "web3": "^1.7.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.19.3",
+    "@babel/core": "7.19.3",
     "@babel/eslint-parser": "^7.13.14",
-    "@babel/preset-env": "^7.19.3",
+    "@babel/preset-env": "7.19.3",
     "@quasar/app-webpack": "3",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
-    "@vue/test-utils": "^2.1.0",
-    "babel-jest": "^29.1.2",
+    "@vue/test-utils": "2.1.0",
+    "@vue/vue3-jest": "29",
+    "babel-jest": "29.1.2",
     "eslint": "8.22.0",
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
