--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "eslint-webpack-plugin": "^2.4.0",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
+    "jest-serializer-vue": "^2.0.2",
     "node-polyfill-webpack-plugin": "^2.0.1",
     "pug": "^3.0.2",
     "pug-plain-loader": "^1.1.0"
