--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build": "quasar build",
     "lint": "eslint --ext .js,.vue ./",
     "test": "jest",
-    "nuke": "rm -rf node_modules && yarn cache clean && yarn install"
+    "nuke": "rm -rf node_modules && yarn cache clean && yarn install",
+    "prepare": "husky install"
   },
   "dependencies": {
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
@@ -59,6 +60,7 @@
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.4.0",
+    "husky": "^8.0.1",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
