--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.4.0",
-    "husky": "^8.0.1",
+    "husky": "8.0.1",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
