--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@types/lodash": "^4.14.182",
     "@vue/test-utils": "2.1.0",
     "@vue/vue3-jest": "29",
+    "@walletconnect/web3-provider": "^1.8.0",
     "babel-jest": "29.1.2",
     "eslint": "8.22.0",
     "eslint-plugin-jest": "27.1.0",
