--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@metamask/detect-provider": "^2.0.0",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
+    "@walletconnect/sign-client": "^2.3.0",
+    "@web3modal/standalone": "^2.0.0",
     "axios": "^0.21.2",
     "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
@@ -59,7 +61,6 @@
     "@typescript-eslint/parser": "^5.48.2",
     "@vue/test-utils": "2.1.0",
     "@vue/vue3-jest": "29",
-    "@walletconnect/web3-provider": "^1.8.0",
     "babel-jest": "29.1.2",
     "eslint": "^8.32.0",
     "eslint-plugin-jest": "27.1.0",
