--- a/package.json
+++ b/package.json
@@ -68,9 +68,7 @@
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
-    "node-polyfill-webpack-plugin": "^2.0.1",
-    "pug": "^3.0.2",
-    "pug-plain-loader": "^1.1.0"
+    "node-polyfill-webpack-plugin": "^2.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
