feat: display walletconnect modal, connect

--- a/package.json
+++ b/package.json
@@ -18,6 +18,10 @@
     "@metamask/detect-provider": "^2.0.0",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
+    "@wagmi/core": "^0.10.8",
+    "@web3modal/core": "^2.2.2",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/ui": "^2.2.2",
     "axios": "^0.21.2",
     "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
