feat: display wallet connect modal with chain config for metamask

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "@metamask/detect-provider": "^2.0.0",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
-    "@walletconnect/sign-client": "^2.3.0",
-    "@web3modal/standalone": "^2.0.0",
+    "@wagmi/core": "^0.10.8",
+    "@web3modal/ethereum": "^2.2.2",
+    "@web3modal/html": "^2.2.2",
     "axios": "^0.21.2",
     "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
@@ -31,7 +32,7 @@
     "eosjs-ecc": "^4.0.7",
     "erc-20-abi": "^1.0.0",
     "ethereumjs-util": "^7.1.4",
-    "ethers": "^5.5.1",
+    "ethers": "^5",
     "fs": "^0.0.1-security",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
