--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
     "@quasar/app-webpack": "3.6.2",
+    "@quasar/quasar-app-extension-qmediaplayer": "^2.0.0-beta.6",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
