--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuke": "rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
+    "@codemirror/theme-one-dark": "^6.1.2",
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
     "@ethereumjs/tx": "^3.5.0",
     "@metamask/detect-provider": "^2.0.0",
@@ -42,7 +43,7 @@
     "universal-authenticator-library": "^0.3.0",
     "vue": "3",
     "vue-i18n": "^9.0.0",
-    "vue-json-viewer": "3",
+    "vue-json-pretty": "^2.2.4",
     "vue-router": "4",
     "vue3-click-away": "^1.2.4",
     "vuex": "4",
