--- a/.github/workflows/on_pull_request_active.yml
+++ b/.github/workflows/on_pull_request_active.yml
@@ -51,6 +51,7 @@ jobs:
           body-includes: '<!-- pr-ci-comment -->'
           comment-author: 'github-actions[bot]'
           body: | # can be a single value or you can compose text with multi-line values
+            markdown: kramdown
             <!-- pr-ci-comment -->
             # <span aria-hidden="true">✅</span> Pull Request Deploy Preview Details
 
