--- a/package.json
+++ b/package.json
@@ -16,8 +16,9 @@
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
     "@ethereumjs/tx": "^3.5.0",
     "@metamask/detect-provider": "^2.0.0",
-    "@quasar/extras": "^1.0.0",
+    "@quasar/extras": "^1.16.4",
     "@telosnetwork/telosevm-js": "^0.2.6",
+    "autoprefixer": "^10.4.2",
     "axios": "^0.21.2",
     "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
@@ -33,16 +34,17 @@
     "fs": "^0.0.1-security",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
+    "keccak": "^3.0.3",
     "moment": "^2.29.4",
-    "quasar": "2",
+    "quasar": "^2.6.0",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
     "ual-wombat": "^0.3.3",
     "universal-authenticator-library": "^0.3.0",
-    "vue": "3",
+    "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-json-viewer": "3",
-    "vue-router": "4",
+    "vue-router": "^4.0.0",
     "vue3-click-away": "^1.2.4",
     "vuex": "4",
     "web3": "^4.0.1"
@@ -51,9 +53,10 @@
     "@babel/core": "7.19.3",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
-    "@quasar/app-webpack": "3.6.2",
+    "@quasar/app-vite": "^1.3.0",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
+    "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
     "@typescript-eslint/parser": "^5.48.2",
     "@vue/test-utils": "2.1.0",
@@ -62,11 +65,10 @@
     "eslint": "^8.32.0",
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
-    "eslint-webpack-plugin": "^2.4.0",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
-    "node-polyfill-webpack-plugin": "^2.0.1"
+    "vite-plugin-node-polyfills": "^0.9.0"
   },
   "browserslist": [
     "last 10 Chrome versions",
@@ -80,7 +82,7 @@
     "last 5 Opera versions"
   ],
   "engines": {
-    "node": ">= 10.18.1",
+    "node": "^18 || ^16 || ^14.19",
     "npm": ">= 6.13.4",
     "yarn": ">= 1.21.1"
   }
