--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
     "dotenv": "^8.2.0",
+    "encoding": "^0.1.13",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
     "erc-20-abi": "^1.0.0",
@@ -34,7 +35,9 @@
     "fs": "^0.0.1-security",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
+    "hono": "^3.3.4",
     "keccak": "^3.0.3",
+    "localstorage-polyfill": "^1.0.1",
     "moment": "^2.29.4",
     "quasar": "^2.6.0",
     "ual-anchor": "^1.0.0",
@@ -53,6 +56,8 @@
     "@babel/core": "7.19.3",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
+    "@hono/node-server": "^1.1.1",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@quasar/app-vite": "^1.3.0",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
@@ -65,6 +70,7 @@
     "eslint": "^8.32.0",
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
+    "express": "^4.18.2",
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
