--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -27,7 +27,7 @@ jobs:
       - name: build
         uses: actions/setup-node@v3
         with:
-          node-version: '16.17.0'
+          node-version: 18
       - run: yarn global add @quasar/cli
       - run: yarn install
       - run: quasar build
