--- a/package.json
+++ b/package.json
@@ -54,10 +54,11 @@
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
     "@quasar/app-vite": "^1.3.0",
+    "@quasar/babel-preset-app": "^2.0.2",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
     "@types/node": "^12.20.21",
-    "@typescript-eslint/eslint-plugin": "^5.48.2",
+    "@typescript-eslint/eslint-plugin": "^6.2.1",
     "@typescript-eslint/parser": "^5.48.2",
     "@vue/test-utils": "2.1.0",
     "@vue/vue3-jest": "29",
@@ -68,6 +69,7 @@
     "jest": "29.1.2",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
+    "typescript": "^5.1.6",
     "vite-plugin-node-polyfills": "^0.9.0"
   },
   "browserslist": [
