--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "ethereumjs-util": "^7.1.4",
     "ethers": "^5.5.1",
     "fs": "^0.0.1-security",
+    "global": "^4.4.0",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
     "keccak": "^3.0.3",
@@ -41,18 +42,21 @@
     "ual-ledger": "^0.3.0",
     "ual-wombat": "^0.3.3",
     "universal-authenticator-library": "^0.3.0",
+    "vite-plugin-esmodule": "^1.5.0",
     "vue": "^3.0.0",
     "vue-i18n": "^9.0.0",
     "vue-json-viewer": "3",
     "vue-router": "^4.0.0",
     "vue3-click-away": "^1.2.4",
     "vuex": "4",
-    "web3": "^4.0.1"
+    "web3": "^4.0.1",
+    "webpack": "^5.88.2"
   },
   "devDependencies": {
     "@babel/core": "7.19.3",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
+    "@originjs/vite-plugin-commonjs": "^1.0.3",
     "@quasar/app-vite": "^1.3.0",
     "@quasar/babel-preset-app": "^2.0.2",
     "@types/jest": "29.1.1",
@@ -70,6 +74,7 @@
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
     "typescript": "^5.1.6",
+    "vite-plugin-commonjs": "^0.8.2",
     "vite-plugin-node-polyfills": "^0.9.0"
   },
   "browserslist": [
