--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
     "fs": "^0.0.1-security",
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
+    "isomorphic-fetch": "^3.0.0",
+    "localstorage-polyfill": "^1.0.1",
     "moment": "^2.29.4",
     "quasar": "2",
     "ual-anchor": "^1.0.0",
