--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -32,9 +32,8 @@ jobs:
       - run: yarn install
       - run: quasar build -m spa
       - run: quasar build -m ssr
-      - run: ls -la
-      - run: mkdir dist/spa/functions && cp -a functions/* dist/spa/functions/
-      - run: cp -a dist/ssr dist/spa/ssr
+      - run: cp -a dist/ssr functions/ssr
+      - run: mkdir dist/spa/functions && cp -a functions dist/spa/functions
       - name: upload
         uses: actions/upload-artifact@v3
         with:
