--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -119,6 +119,8 @@ jobs:
           name: ${{ inputs.network }}-build
           path: dist/spa
       - run: cp -a dist/spa/functions .
+      - run: echo "RUNNING ls -la" && ls -la
+      - run: echo "RUNNING ls -la dist/spa" && ls -la dist/spa
       - name: publish
         uses: cloudflare/pages-action@v1
         with:
