--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -96,6 +96,8 @@ jobs:
       - run: cp -a dist/spa/functions .
       - run: echo "RUNNING ls -la" && ls -la
       - run: echo "RUNNING ls -la dist/spa" && ls -la dist/spa
+      - run: echo "RUNNING ls -la functions" && ls -la functions
+      - run: echo "RUNNING pwd" && pwd
       - name: publish
         uses: cloudflare/pages-action@v1
         with:
