--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -33,7 +33,7 @@ jobs:
       - run: quasar build -m spa
       - run: quasar build -m ssr
       - run: cd dist/ssr && yarn install
-      - run: "ECHO running pwd after cd dist/ssr" && pwd
+      - run: echo "RUNNING pwd after cd dist/ssr" && pwd
       - run: cd ../..
       - run: cp -a dist/ssr functions/ssr
       - run: cp -a functions dist/spa/functions
