--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -94,7 +94,7 @@ jobs:
           name: ${{ inputs.network }}-build
           path: dist/spa
       - run: cp -a dist/spa/functions .
-      - run: cd dist/spa/functions/ssr && yarn add compression && yarn add path express @vue/server-renderer @quasar/ssr-helpers/create-renderer && cd -
+      - run: cd dist/spa/functions/ssr && yarn add compression && yarn add path express && cd -
       - name: publish
         uses: cloudflare/pages-action@v1
         with:
