--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -30,8 +30,8 @@ jobs:
           node-version: '16.17.0'
       - run: yarn global add @quasar/cli
       - run: yarn install
-      - run: quasar build -m spa
-      - run: quasar build -m ssr
+      - run: quasar build -m spa -d
+      - run: quasar build -m ssr -d
       - run: cp -a dist/ssr functions/ssr
       - run: cp -a functions dist/spa/functions
       - name: upload
