--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,8 @@
 [build]
-  publish = "dist/spa"
+  publish = "dist/ssr"
 
 [context.environment]
-  NODE_VERSION = "14"
+  NODE_VERSION = "16"
 
 [[redirects]]
   from = "/*"
