--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -31,9 +31,8 @@ jobs:
       - run: yarn global add @quasar/cli
       - run: yarn install
       - run: quasar build -m ssr -d
-      - run: mkdir functions
-      - run: cp index.js functions
-      - run: ls -l dist/ssr
+      - run: echo $(ls -l)
+      # - run: ls -l dist/ssr
       - name: upload
         uses: actions/upload-artifact@v3
         with:
