--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -33,7 +33,7 @@ jobs:
       - run: quasar build -m ssr -d
       - run: echo $(ls -l)
       - run: mkdir dist/ssr/functions
-      - run: cp -a dist/ssr/index.js dist/ssr/functions
+      - run: echo "export function onRequest(context) { return new Response('Hello, world!') }" > dist/ssr/functions/index.js
       # - run: ls -l dist/ssr
       - name: upload
         uses: actions/upload-artifact@v3
@@ -121,8 +121,8 @@ jobs:
         with:
           name: ${{ inputs.network }}-build
           path: dist/ssr
-      - run: cp -a dist/ssr/functions .
-      - run: cd dist/ssr/functions && yarn install && cd -
+      # - run: cp -a dist/ssr/functions .
+      # - run: cd dist/ssr/functions && yarn install && cd -
       - name: publish
         uses: cloudflare/pages-action@v1
         with:
