--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -31,9 +31,9 @@ jobs:
       - run: yarn global add @quasar/cli
       - run: yarn install
       - run: quasar build -m ssr -d
-      - run: echo $(ls -l)
       - run: mkdir dist/ssr/functions
       - run: echo "export function onRequest(context) { return new Response('Hello, world!') }" > dist/ssr/functions/hello.js
+      - run: echo "<html><body>hi</body></html>" > dist/ssr/index.html
       # - run: ls -l dist/ssr
       - name: upload
         uses: actions/upload-artifact@v3
