--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -32,7 +32,7 @@ jobs:
       - run: yarn install
       - run: quasar build -m ssr -d
       - run: mkdir dist/ssr/functions
-      - run: echo "export function onRequest(context) { return new Response('Hello, world!') }" > dist/ssr/functions/hello.js
+      - run: echo "export async function onRequest(context) { return new Response('Hello, world!') }" > dist/ssr/functions/hello.js
       - run: echo "<html><body>hi</body></html>" > dist/ssr/index.html
       # - run: ls -l dist/ssr
       - name: upload
