--- a/.github/workflows/build_job.yml
+++ b/.github/workflows/build_job.yml
@@ -34,7 +34,7 @@ jobs:
       - run: mkdir dist/ssr/functions
       - run: echo "export async function onRequest(context) { return new Response('Hello, world!') }" > dist/ssr/functions/hello.js
       - run: echo "<html><body>hi</body></html>" > dist/ssr/index.html
-      # - run: ls -l dist/ssr
+      - run: cp -a dist/ssr/functions .
       - name: upload
         uses: actions/upload-artifact@v3
         with:
