--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
     "@ethereumjs/tx": "^3.5.0",
     "@metamask/detect-provider": "^2.0.0",
+    "@wagmi/core": "^1.3.7",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
     "axios": "^0.21.2",
@@ -24,6 +25,7 @@
     "big.js": "^6.2.1",
     "bn.js": "^5.2.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.29.3",
     "dotenv": "^8.2.0",
     "eosjs": "^21.0.3",
     "eosjs-ecc": "^4.0.7",
@@ -34,6 +36,8 @@
     "highlight.js": "10",
     "highlightjs-solidity": "^2.0.3",
     "moment": "^2.29.4",
+    "oreid-js": "^4.7.1",
+    "oreid-webpopup": "^2.4.0",
     "quasar": "2",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
