--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@babel/core": "7.19.3",
     "@babel/eslint-parser": "^7.13.14",
     "@babel/preset-env": "7.19.3",
+    "@babel/preset-typescript": "^7.23.0",
     "@quasar/app-webpack": "3.6.2",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.182",
@@ -67,10 +68,11 @@
     "eslint-plugin-jest": "27.1.0",
     "eslint-plugin-vue": "^9.0.0",
     "eslint-webpack-plugin": "^2.4.0",
-    "jest": "29.1.2",
+    "jest": "^29.7.0",
     "jest-environment-jsdom": "29.1.2",
     "jest-serializer-vue": "^2.0.2",
-    "node-polyfill-webpack-plugin": "^2.0.1"
+    "node-polyfill-webpack-plugin": "^2.0.1",
+    "ts-jest": "^29.1.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
