--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
     "@wagmi/core": "^1.3.7",
+    "@web3modal/ethereum": "2.7.0",
+    "@web3modal/html": "2.7.0",
     "axios": "^0.21.2",
     "axios-time": "^1.0.0",
     "babel-loader": "^8.1.0",
