--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "oreid-js": "^4.7.1",
     "oreid-webpopup": "^2.4.0",
     "quasar": "2",
+    "rxjs": "^7.8.0",
     "ual-anchor": "^1.0.0",
     "ual-ledger": "^0.3.0",
     "ual-wombat": "^0.3.3",
