--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
     "@ethereumjs/tx": "^3.5.0",
+    "@hcaptcha/vue3-hcaptcha": "^1.3.0",
     "@metamask/detect-provider": "^2.0.0",
     "@quasar/extras": "^1.0.0",
     "@telosnetwork/telosevm-js": "^0.2.6",
