--- a/package.json
+++ b/package.json
@@ -7,9 +7,10 @@
   "private": true,
   "scripts": {
     "lint": "eslint --ext .js,.ts,.vue ./",
-    "test": "echo \"No test specified\" && exit 0",
-    "dev": "quasar dev",
-    "build": "quasar build"
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
+    "dev": "quasar dev -m ssr",
+    "build": "quasar build -m ssr",
+    "nuke": "rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
@@ -60,8 +61,11 @@
     "web3": "^4.0.1"
   },
   "devDependencies": {
+    "@babel/core": "7",
+    "@babel/preset-typescript": "^7.23.3",
     "@intlify/vite-plugin-vue-i18n": "^3.3.1",
     "@quasar/app-vite": "^1.4.3",
+    "@quasar/babel-preset-app": "^2.0.2",
     "@quasar/quasar-app-extension-qmediaplayer": "^2.0.0-beta.6",
     "@types/jest": "29.1.1",
     "@types/lodash": "^4.14.202",
@@ -71,6 +75,7 @@
     "@vue/test-utils": "2.1.0",
     "@vue/vue3-jest": "29",
     "autoprefixer": "^10.4.2",
+    "babel-jest": "^29",
     "eslint": "^8.11.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.20.1",
