feat: address qr code

--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "moment": "^2.29.4",
     "oreid-js": "^4.7.1",
     "oreid-webpopup": "^2.4.0",
+    "qrious": "^4.0.2",
     "quasar": "2",
     "rxjs": "^7.8.0",
     "ual-anchor": "^1.0.0",
@@ -48,8 +49,8 @@
     "universal-authenticator-library": "^0.3.0",
     "vue": "3",
     "vue-i18n": "^9.0.0",
-    "vue-json-pretty": "^2.2.4",
     "vue-inline-svg": "^3.1.2",
+    "vue-json-pretty": "^2.2.4",
     "vue-json-viewer": "3",
     "vue-router": "4",
     "vuex": "4",
