--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "nuke": "rm -rf node_modules && yarn cache clean && yarn install"
   },
   "dependencies": {
+    "@download/blockies": "^1.0.3",
     "@eosrio/hyperion-stream-client": "^0.4.0-beta.5",
     "@ethereumjs/tx": "^3.5.0",
     "@metamask/detect-provider": "^2.0.0",
